--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,4 +23,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: supportlik/github-ci:latest
+          tags: supportlik/godot-ci:latest
